TN-1108 patients list code cleanup and bug fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1165,6 +1165,8 @@ div.footer-wrapper.right-panel {
     #orglist-footer-container {
       padding: 0.5em 1em;
       width: 250px;
+      display: flex;
+      justify-content: space-between;
       max-width: 100%;
       margin: 0 auto;
       label {
