--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -976,6 +976,8 @@ div.pull-right {
       width: 250px;
       max-width: 100%;
       margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
       label {
         font-weight: normal;
         font-size: @baseMobileFontSize;
