--- a/portal/templates/research.html
+++ b/portal/templates/research.html
@@ -10,7 +10,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <button type="button" class="close" data-dismiss="modal" aria-label="{{_('Close')}}"><span aria-hidden="true">&times;</span></button>
               {{ _("Export questionnaire data") }}
             </div>
             <div class="modal-body">
