--- a/portal/templates/admin/patients_by_org.html
+++ b/portal/templates/admin/patients_by_org.html
@@ -121,7 +121,7 @@
                         {% endraw %}
                     </div>
                     <div class="modal-footer" >
-                        <button type="button" class="btn btn-default btn-consent-close" data-dismiss="modal" aria-label="Close">{{ _("Close") }}</button>
+                        <button type="button" class="btn btn-default btn-consent-close" data-dismiss="modal" aria-label="{{_('Close')}}">{{ _("Close") }}</button>
                     </div>
                 </div>
             </div>
