followup bug fixes, in initial queries, procedures, and fix template parameters for orgs macro

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -743,6 +743,9 @@ div.footer-wrapper.right-panel {
   float: left;
   width: 2%;
   margin: 0.3em 0.5em 0 0;
+  &:hover {
+    cursor: pointer;
+  }
 }
 .terms-tick-box-text {
   width: 93.5%;
