--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -567,6 +567,9 @@ div.right-panel {
   float: left;
   width: 2%;
   margin: 0.2em 0.5em 0 0;
+  &:hover {
+    cursor: pointer;
+  }
 }
 .terms-tick-box-text {
   float: left;
