--- a/portal/templates/profile/patient_profile.html
+++ b/portal/templates/profile/patient_profile.html
@@ -54,7 +54,7 @@
       <div class="profile-item-container {% if (current_user and current_user.has_role(ROLE.STAFF) and ROLE.STAFF in config.CONSENT_EDIT_PERMISSIBLE_ROLES) or (current_user and current_user.has_role(ROLE.ADMIN)) or (user and user.has_role(ROLE.STAFF) and current_user and current_user.has_role(ROLE.STAFF_ADMIN))%}editable{% endif %}" data-sections="org">
         {{profile_macro.profileEditButton()}}
         {% call profile_macro.titleSection() -%}{{ _("Clinic") }}{%- endcall %}
-        {{profile_macro.profileOrg(user,None,consent_agreements, current_user)}}
+        {{profile_macro.profileOrg(user,consent_agreements, current_user)}}
       </div>
     </div>
   </div>
