--- a/portal/templates/profile/staff_profile.html
+++ b/portal/templates/profile/staff_profile.html
@@ -14,7 +14,7 @@
         <div class="col-md-12 col-xs-12">
             {% call profile_macro.profileSection(data_sections="org") -%}
                 {% call profile_macro.titleSection() -%}{{ _("Clinic") }}{%- endcall %}
-                {{profile_macro.profileOrg(user,consent_agreements, current_user)}}
+                {{profile_macro.profileOrg(person=user,consent_agreements=consent_agreements, current_user=current_user)}}
             {%- endcall %}
         </div>
     </div>
