--- a/portal/templates/profile/my_profile.html
+++ b/portal/templates/profile/my_profile.html
@@ -42,7 +42,7 @@
                     <div class="profile-item-container {% if user and user.has_role(ROLE.ADMIN) %}editable{% endif %}" data-sections="org">
                         {{profile_macro.profileEditButton()}}
                         {% call profile_macro.titleSection() -%}{{ _("My Clinic") }}{%- endcall %}
-                        {{profile_macro.profileOrg(user,None,consent_agreements, current_user)}}
+                        {{profile_macro.profileOrg(person=user,consent_agreements=consent_agreements, current_user=current_user)}}
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <div class="profile-item-container {% if user and user.has_role(ROLE.ADMIN) %}editable{% endif %}" data-sections="org">
                     {{profile_macro.profileEditButton()}}
                     {% call profile_macro.titleSection(id="orgsLoc") -%}{{_("My Clinic")}}{%- endcall%}
-                    {{profile_macro.profileOrg(user,None,consent_agreements, current_user)}}
+                    {{profile_macro.profileOrg(person=user,consent_agreements=consent_agreements, current_user=current_user)}}
                 </div>
             </div>
         </div>
