--- a/portal/templates/profile/user_profile.html
+++ b/portal/templates/profile/user_profile.html
@@ -22,7 +22,7 @@
         <div class="col-md-12 col-xs-12">
             {% call profile_macro.profileSection(data_sections="org") -%}
                 {% call profile_macro.titleSection(id="orgsLoc") -%}{{ _("Clinic") }}{%- endcall %}
-                {{profile_macro.profileOrg(user,None,consent_agreements, current_user)}}
+                {{profile_macro.profileOrg(person=user,consent_agreements=consent_agreements, current_user=current_user)}}
             {%- endcall %}
         </div>
     </div>
