TN-1108 streamline account creation code

--- a/portal/templates/profile/profile_create_base.html
+++ b/portal/templates/profile/profile_create_base.html
@@ -48,3 +48,7 @@
     <script src="{{ url_for('static', filename='js/procedures.js') }}" async></script>
     <script src="{{ url_for('static', filename='js/accountCreation.js') }}"></script>
 {% endblock additional_scripts %}
+{% block document_ready %} /* information from server, will remove when API is available */
+var leafOrgs = {% if leaf_organizations %} {{leaf_organizations | safe}} {% else %} false {% endif %};
+var orgList = {% if org_list %} {{org_list | safe}} {% else %} false {% endif %};
+{% endblock %}
