TN-1107 email ready message styling fix

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -119,6 +119,13 @@ body {
     color: red;
   }
 }
+.email-ready-message {
+  padding: 8px 5px;
+  span.warning {
+    display: inline-block;
+    margin-right: 8px;
+  }
+}
 .form-control,
 input,
 select,
