--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -247,6 +247,13 @@ a.btn {
   padding: 0;
   margin: 1em 0.2em 2em 0.2em;
 }
+.email-ready-message {
+  padding: 8px 5px;
+  span.warning {
+    display: inline-block;
+    margin-right: 8px;
+  }
+}
 .button--LR,
 .button--LR.data-show,
 #profileConsentList .button--LR
