TN-1108 reports button styling fix and modal fix on patients list

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -885,6 +885,8 @@ div.pull-right {
     margin: 0.8em auto;
   }
   td.reports-field {
+    display: flex;
+    justify-content: center;
     a {
       width: 4em;
       max-width: 100%;
@@ -900,13 +902,8 @@ div.pull-right {
       white-space: nowrap;
     }
     a.btn-report {
-      padding: .4em .2em;
-      margin: 0.2em .2em 0.3em .2em;
-    }
-    a.btn-report-2 {
-      margin-left: -1.5em;
-      padding-left: 0;
-      width: 3.5em;
+      padding: 8px;
+      margin: 4px;
     }
   }
   .eproms-id-label {
