put accidentally deleted function back

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1174,13 +1174,16 @@ div.footer-wrapper.right-panel {
 
     #orglist-footer-container {
       padding: 0.5em 1em;
-      width: 250px;
+      width: 300px;
       display: flex;
       justify-content: space-between;
       max-width: 100%;
       margin: 0 auto;
       label {
         font-weight: normal;
+        margin: 2px;
+        line-height: 1.1em;
+        text-align: center;
       }
       input[type="checkbox"] {
         position: relative;
@@ -3360,6 +3363,7 @@ div.timezone-warning.text-warning {
     #btnProfileSendEmail, .custom-btn,
     .btn-send-email {
       width: 100%;
+      white-space: pre-wrap;
     }
   }
   .form-group {
