--- a/portal/templates/profile/profile_base.html
+++ b/portal/templates/profile/profile_base.html
@@ -11,6 +11,7 @@
         <div class="flex">
           <div id="profileHeader" class="profile-header"><h4 class="tnth-headline">{% block profile_title %}{{_("TrueNTH Profile")}}{% endblock %}</h4></div>
         </div>
+        <div id="profileErrorMessage" class="error-message"></div>
         <div id="profileMainContent">{% block profile_content %}{% endblock %}</div>
         <br/><br/>
       </div>
