--- a/portal/gil/templates/gil/base.html
+++ b/portal/gil/templates/gil/base.html
@@ -93,11 +93,11 @@
           {% endif %}
           <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item--decisionsupport"><a href="{{url_for('gil.decision_support')}}">
               <svg width="32" height="32">
-                <use xlink:href="#DS-Icon-Nav"></use>
+                <use xlink:href="{{url_for('gil.static', filename='img/GIL.svg')}}#DS-Icon-Nav"></use>
               </svg>{{_("Decision Support")}}</a></li>
           <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item--symptomtracker"><a href="{{url_for('gil.symptom_tracker')}}">
               <svg width="32" height="32">
-                <use xlink:href="#ST-Icon-Nav"></use>
+                <use xlink:href="{{url_for('gil.static', filename='img/GIL.svg')}}#ST-Icon-Nav"></use>
               </svg>{{_("Symptom Tracker")}}</a></li>
           <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item--exercisediet"><a href="{{url_for('exercise_diet.portal')}}">{{_("Exercise and Diet")}}</a></li>
           <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item--livedexperience"><a href="{{url_for('gil.lived_experience')}}">{{_("Lived Experience")}}</a></li>
@@ -212,10 +212,10 @@
             <div>
             <a href="{{url_for('auth.login', provider_name='facebook')}}" class="button button--facebook button-large button--teal button--has-svg">
               <svg width="15" height="31">
-                <use xlink:href="#Facebook-Icon"></use>
+                <use xlink:href="{{url_for('gil.static', filename='img/GIL.svg')}}#Facebook-Icon"></use>
               </svg>{{_("Log in with Facebook")}}</a><a href="{{url_for('auth.login',provider_name='google')}}" class="button button--google button-large button--teal button--has-svg">
               <svg width="20" height="31">
-                <use xlink:href="#Google-Icon"></use>
+                <use xlink:href="{{url_for('gil.static', filename='img/GIL.svg')}}#Google-Icon"></use>
               </svg>{{_("Log in with Google")}}</a>
             </div>
           </div>
