--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -887,6 +887,7 @@ div.pull-right {
   td.reports-field {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     a {
       width: 4em;
       max-width: 100%;
