TN-1202 consent list display fix

--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -667,8 +667,8 @@
                                 <span class="text-success small-text eproms-tou-table-text"><a v-bind:href="item.agreement_url" target="_blank">{{item.eproms_agreement_text}}</a></span>
                                 <span class="text-success small-text truenth-tou-table-text">{{item.truenth_agreement_text}}</span>
                             </td>
-                            <td class="consentlist-cell agreement">
-                                <span class="eproms-tou-table-text text-capitalize"><a v-bind:href="item.agreement_url" target="_blank">{{item.eproms_url_text}}</a></span>
+                            <td class="consentlist-cell">
+                                <span class="eproms-tou-table-text text-capitalize agreement"><a v-bind:href="item.agreement_url" target="_blank">{{item.eproms_url_text}}</a></span>
                                 <span class="truenth-tou-table-text">
                                     {{item.truenth_url_text}}
                                     <span>&nbsp;<a v-bind:href="item.agreement_url" target="_blank"><em>{{item.view}}</em></a></span>
