--- a/portal/templates/flask_user/reset_password.html
+++ b/portal/templates/flask_user/reset_password.html
@@ -6,7 +6,7 @@
 
 <form action="" method="POST" class="form" role="form">
     {{ form.hidden_tag() }}
-    {% set password_requirement_text = gettext('Password must have at least 8 characters with one lowercase letter, one uppercase letter and one number') %}
+    {% set password_requirement_text = gettext('Password must have at least eight characters with one lowercase letter, one uppercase letter and one number') %}
     {% set email_data_error = gettext('Oops, the password does not meet the minimum requirements.') %}
     {% set email_match_error = gettext('Oops, the two password fields do not match.') %}
     {{ render_field(form.new_password, data_error=email_data_error, pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$",
