--- a/portal/eproms/templates/eproms/landing.html
+++ b/portal/eproms/templates/eproms/landing.html
@@ -23,10 +23,16 @@
 </style>
 <div id="fullSizeBox" class="box-min-500">
     <img  src="{{ url_for('.static', filename='img/spacer.jpg') }}" class="tnth-image img-responsive hidden-xs" style="visibility:hidden" alt="spacer image"/>
+    <!-- fill in conditional based on config variable to show/hide this -->
+        <div class="sys-maintenance">
+            <h4 class="title">{{_("Please note")}}</h4>
+            <h4 class="message">
+                <!-- FILL IN MESSAGE HERE -->
+            </h4>
+        </div>
+    <!-- end conditional-->
     <div id="fullSizeContainer">
-
         <div class="text-center"><a href="/"><img id="fullSizeLogo" src="{{ url_for('static', filename='img/logo_wordmark.png') }}" alt="{{_('TrueNTH')}}" /></a></div>
-
         <div id="wellContainer">
             <div class="tnth-splash">
                 <div id="wellContent">
