--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -80,6 +80,7 @@
 @wellColor: #F7F7F7;
 @notificationBgColor: #EB1939;
 @notificationLinkHoverBgColor: #CC112D;
+@alertColor: #a94442;
 
 
 /**
@@ -107,9 +108,39 @@ body {
   font-size: @baseMobileFontSize;
   text-rendering: optimizeLegibility;
 }
+.sys-maintenance {
+  position: fixed;
+  z-index: 2000;
+  font-size: 12px;
+  top: 9em;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 65px;
+  margin: 0;
+  padding: 0 8px;
+  color: @alertColor;
+  background: #FFF;
+  text-align: center;
+  .title {
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+}
+@media (min-width: 699px) {
+  .sys-maintenance {
+    font-size: 14px;
+  }
+}
+@media (min-width: 1200px) {
+  .sys-maintenance {
+    top: 0;
+    height: 58px;
+  }
+}
 .save-loader-wrapper {
   .load-icon {
-    margin-left:4px; 
+    margin-left:4px;
     margin-top:5px;
   }
   .success-icon {
