--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -7729,6 +7729,32 @@ a.home--modal-link {
         background: #607d8b;
     }
 }
+.sys-maintenance {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 65px;
+    background: #fffc;
+    z-index: 100001;
+    text-align: center;
+    padding: 0 8px;
+    color: #a94442;
+    .title {
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+}
+.sys-maintenance .title,
+.sys-maintenance .message {
+    font-size: 14px;
+}
+@media (min-width: 500px) {
+    .sys-maintenance .title,
+    .sys-maintenance .message {
+        font-size: 1.2em;
+    }
+}
 @media (min-width: 1200px) {
     .home--item-container {
         width: 542px;
